# gemini-cli-codeassist

./: .gitignore  .gitmodules  Makefile  README.md  backend-open.sh  backend-secure.sh  backend.sh  cloudrun-rust.sh  enablemcp.sh  firestore-rust.sh  init.sh  mcp-stdio-rust  package.json  package.json.mcp  set_env.sh  startproxy.sh
.gemini/: settings.json  settings.json.hello  settings.json.weather
backend-rust/: Cargo.toml  Dockerfile  Makefile  cloudbuild.yaml
backend-rust/src/: main.rs
battle-royale/: mascot_battle.py  sandwich.py
cloudrun-rust/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  cloudbuild.yaml
cloudrun-rust/src/: main.rs
firesdk-stdio-cplus/: .gitignore  CMakeLists.txt  GEMINI.md  README.md  firestore_client.cpp  firestore_client.hpp  main.cpp  test_db.py  test_server.py
firesdk-stdio-cplus/.gemini/: settings.json
firestore-cli-rust/: Cargo.toml  Makefile  README.md
firestore-client-rust/: Cargo.toml  GEMINI.md  Makefile  invoices.csv
firestore-client-rust/src/: main.rs
firestore-cloudrun-rust/: Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml
firestore-https-c/: Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  main.c  test_server.py
firestore-https-c/mcpc/src/: CMakeLists.txt  complt.h  log.c  rsc.h  server.c  server.h
firestore-https-cobol/: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  c_helpers.c  cloudbuild.yaml  cob_helpers.c  firestore_client.c  firestore_client.h  server.c.l3.h  server.c.l4.h  server.c.l5.h  server.c.l6.h  server.c.l7.h  server.c.l8.h  server.cob  test_server_http.py
firestore-https-cplus/: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  firestore_client.cpp  firestore_client.hpp  logger.hpp  main.cpp  test_firestore.py
firestore-https-csharp/: .gitignore  Dockerfile  GEMINI.md  Makefile  Program.cs  README.md  cloudbuild.yaml  firestore-https-csharp.csproj  firestore-https-csharp.slnx
firestore-https-flutter/: CHANGELOG.md  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  pubspec.yaml
firestore-https-fortran/: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  c_helpers.c  cloudbuild.yaml  firestore_client.c  run_get_products.py  server.f90  test_server_fortran.py
firestore-https-go/: .gitignore  Makefile  README.md  cloudbuild.yaml  go.mod  go.sum  handlers.go  main.go  main_test.go  models.go  repository.go
firestore-https-haskell/: Dockerfile  GEMINI.md  Makefile  README.md  cabal.project  cloudbuild.yaml  firestore-https-haskell.cabal
firestore-https-haskell/.gemini/: settings.json.cloudrun  settings.json.https
firestore-https-haskell/app/: Main.hs
firestore-https-haskell/src/: Logic.hs  Types.hs
firestore-https-haskell/test/: LogicSpec.hs  Spec.hs
firestore-https-java/: README.md  cloudbuild.yaml  pom.xml
firestore-https-kotlin/: .dockerignore  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  build.gradle.kts  cloudbuild.yaml  settings.gradle.kts  test_mcp.py
firestore-https-lisp/: .gitignore  GEMINI.md  Makefile  README.md  build.lisp  check_parens.py  check_parens_l.py  check_parens_s.py  check_parens_v.py  cloudbuild.yaml  debug-inspect-tools.lisp  debug-investigate-method.lisp  firestore-https-lisp.asd  locate-clack-sse.lisp  mcp-https-lisp.asd  setup.lisp
firestore-https-perl/: .perlcriticrc  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  cpanfile  server.pl  test_firestore.pl
firestore-https-php/: .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  composer.json  main.php  stdio.php
firestore-https-python/: Makefile  README.md  cloudbuild.yaml  main.py  requirements.txt
firestore-https-ruby/: .rubocop.yml  Dockerfile  GEMINI.md  Gemfile  main.rb  (+4 more)
firestore-https-rust/: Cargo.toml  Dockerfile  GEMINI.md  README.md  cloudbuild.yaml
firestore-https-rust/.gemini/: settings.json
firestore-https-rust/src/: main.rs
firestore-rust/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  cloudbuild.yaml
firestore-rust/src/: main.rs
firestore-stdio-c/mcpc/tst/: CMakeLists.txt
firestore-stdio-cplus/: .gitignore  CMakeLists.txt  COMMIT_MESSAGE  GEMINI.md  Makefile  README.md  firestore_client.cpp  firestore_client.hpp  main.cpp
firestore-stdio-cplus/.gemini/: settings.json
firestore-stdio-rust/: Cargo.toml  Makefile  README.md
firestore-stdio-rust/.gemini/: settings.json
firestore-stdio-rust/src/: main.rs
gcp-client-rust/: Cargo.toml  Makefile  README.md
gcp-client-rust/src/: main.rs
gcp-cloudrun-client-rust/: Cargo.toml  Dockerfile  Makefile  README.md  cloudbuild.yaml
gcp-cloudrun-client-rust/.gemini/: settings.json
gcp-cloudrun-client-rust/src/: main.rs
gcp-stdio-client-rust/: Cargo.toml  Makefile
gcp-stdio-client-rust/.gemini/: settings.json
gcp-stdio-client-rust/src/: main.rs
hello-rust/: Cargo.toml  Makefile
hello-rust/.gemini/: settings.json.hellocloud
hello-rust/src/: main.rs  test.rs
logging-client-rust/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml
logging-client-rust/src/: main.rs
mcp-cli-rust/: Cargo.toml  GEMINI.md  cloudbuild.yaml
mcp-cli-rust/src/: main.rs
mcp-client-rust/: Cargo.toml  Dockerfile  Makefile
mcp-client-rust/.gemini/: settings.json
mcp-client-rust/src/: main.rs
mcp-cloudrun-rust/: .gitignore  Cargo.toml  Makefile
mcp-https-haskell/: .dockerignore  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  cloudbuild.yaml  mcp-https-haskell.cabal
mcp-https-haskell/.gemini/: settings.json.cloudrun  settings.json.https
mcp-https-haskell/app/: Main.hs
mcp-https-haskell/src/: Logic.hs  Types.hs
mcp-https-haskell/test/: LogicSpec.hs
mcp-stdio-rust/: Cargo.toml
mcp-stdio-rust/.gemini/: settings.json
mcp-stdio-rust/src/: main.rs
mcptest-rust/: Cargo.toml  Makefile
mcptest-rust/.gemini/: settings.json.proxy
mcptest-rust/src/: main.rs  test.rs  x.rs
pubsub-client-rust/: Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  pubsub.sh
pubsub-client-rust/.gemini/: settings.json  settings.json.orig
pubsub-client-rust/src/: main.rs  v1.rs  v2.rs  v3.rs
(+828 files in other folders)
