[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"
description = "Cymbal Rust Backend"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full", "macros"] }
firestore = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
rand = "0.8.5"
rustls = { version = "0.23.32", features = ["ring"] }
