[package]
name = "cloudrun-rust"
version = "0.1.0"
edition = "2021"
description = "Basic Hello world Rust for tesing GCP Cloud Run"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["http1", "server"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["tokio", "server-auto"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
