[package]
name = "firestore-client-rust"
version = "0.5.0"
edition = "2024"
description = "Basic Rust local Connection CLI tool to Firestore"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xbill9/gemini-cli-codeassist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full", "macros"] }
firestore = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rustls = { version = "0.23.32", features = ["ring"] }
anyhow = "1.0"
dotenv = "0.15.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
csv = "1.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"

