[package]
name = "firestore-rust"
version = "0.1.0"
edition = "2021"
description = "Basic Rust for tesing Firestore"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
rand = "0.8.5"
rustls = { version = "0.23.32", features = ["ring"], default-features = false }
firestore = "0.47.0"
hyper = { version = "1.7.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.17", features = ["full"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
