[package]
name = "firestore-stdio-rust"
version = "0.1.0"
edition = "2024"
description = "Firestore inventory API server over MCP!"
license = "MIT"
repository = "https://github.com/xbill9/gemini-cli-codeassist"

[dependencies]
anyhow = "1.0.98"
rmcp = { version = "0.8.1", features = ["auth", "server", "transport-io"] }
rmcp-macros = "0.8.1"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

firestore = "0.47.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
