[package]
name = "gcp-stdio-client-rust"
version = "0.4.0"
edition = "2024"
description = "GCP client call stdio minimum viable MCP server!"
license = "MIT"
repository = "https://github.com/xbill9/gemini-cli-codeassist"

[dependencies]
anyhow = "1.0.98"
google-cloud-gax = "^1.1.0"
google-cloud-secretmanager-v1 = "^1.1.0"
rmcp = { version = "0.11.0", features = ["auth", "server", "transport-io"] }
rmcp-macros = "0.11.0"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
