[package]
name = "logging-client-rust"
version = "0.1.0"
edition = "2024"
description = "Minimal Rust logging client call to GCP"
license = "MIT"
repository = "https://github.com/xbill9/gemini-cli-codeassist"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
google-cloud-logging-v2 = "1.0.0"
google-cloud-logging-type = "1.0.0"
google-cloud-wkt = "1.0.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"
google-cloud-api = "1.0.0"
google-cloud-secretmanager-v1 = "1.0.0"
google-cloud-gax = "1.0.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
