[package]
name = "mcp-cloudrun-rust"
version = "0.1.0"
edition = "2024"
description = "Minimal Rust MCP server over HTTPS transport deployed to GCP Cloud Run"
license = "MIT"
repository = "https://github.com/xbill9/gemini-cli-codeassist"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
rmcp = { version = "0.8.0", features = ["auth", "server","macros",  "transport-streamable-http-server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "signal"] }

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
