cabal-version:      3.12
name:               mcp-https-haskell
version:            0.1.0.0
license:            NONE
author:             Unknown
maintainer:         xbill9@gmail.com
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Logic
                      Types
    build-depends:    base >= 4.16 && < 5,
                      mcp-server,
                      aeson,
                      text,
                      time,
                      bytestring
    hs-source-dirs:   src
    default-language: GHC2024

executable mcp-https-haskell
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base >= 4.16 && < 5,
                      mcp-server,
                      mcp-https-haskell,
                      text
    hs-source-dirs:   app
    default-language: GHC2024

test-suite mcp-https-haskell-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    LogicSpec
    build-depends:    base >= 4.16 && < 5,
                      mcp-https-haskell,
                      hspec,
                      mcp-server,
                      text