[package]
name = "mcp-stdio-rust"
version = "0.1.0"
edition = "2024"
description = "Hello World Rust stdio minimum viable MCP server!"
license = "MIT"
repository = "https://github.com/xbill9/gemini-cli-codeassist"

[dependencies]
anyhow = "1.0.98"
rmcp = { version = "0.8.0", features = ["auth", "server", "transport-io", "transport-sse-server", "transport-streamable-http-server"] }
rmcp-macros = "0.8.0"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
