[package]
name = "pubsub-client-rust"
version = "0.2.0"
edition = "2024"
description = "Minimal Rust pubsub client call to Google Cloud"
license = "MIT"
repository = "https://github.com/xbill9/gemini-cli-codeassist"


[dependencies]
serde = { version = "^1.0.219", features = ["derive"] }
google-cloud-pubsub = "^0.30.0"
tokio = { version = "^1.37.0", features = ["full"] }
tracing = "0.1.40"
anyhow = "1.0.86"
log = "0.4.21"
pretty_env_logger = "0.5.0"
env_logger = "0.11.3"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
